i solved align image problem

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,22 +1,26 @@
 .contentContainer {
-  max-width: 1280px;
+  max-width: 1200px;
   margin-left: 9.25rem;
 
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+
 }
 
 .hero {
-  max-width: 650px;
+  max-width: 1200px;
   // margin-top: -5.5rem;
   margin-left: 9.25rem;
-
+  position: absolute;
+  left: 0;
   > span {
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     font-size: 1.25rem;
     color: var(--orange-100);
+
+    
   }
 
   h1 {
@@ -72,6 +76,7 @@
   }
 
   
+  
 }
 
 .girl {
@@ -80,4 +85,3 @@
   width: 765px;
   z-index: -0.5;
 }
-
